# NDK-Android-Vulkan-Sensors

./: .gitmodules  README.md
Accelerometer-Cube/: build.gradle
Accelerometer-Cube/app/: CMakeLists.txt  build.gradle
Accelerometer-Cube/app/src/main/: AndroidManifest.xml
Accelerometer-Cube/app/src/main/cpp/: AndroidMain.cpp  Cube.cpp  Cube.h  Cube.hpp  Debugging.h  Sensor.cpp  Sensor.h  ValidationLayers.h  VulkanMain.cpp  VulkanMain.h  linmath.h
Accelerometer-Cube/app/src/main/res/values/: strings.xml
Accelerometer-Cube/app/src/main/shaders/: basic.frag  cube.vert
Accelerometer-Cube/gradle/wrapper/: gradle-wrapper.properties
Heart-Beat-Threading/app/: CMakeLists.txt  build.gradle
Heart-Beat-Threading/app/src/main/: AndroidManifest.xml
Heart-Beat-Threading/app/src/main/assets/models/heart/: Heart.dae  HeartAnim.fbx  heart_astc_8x8_main.ktx  heart_astc_8x8_normal.ktx
Heart-Beat-Threading/app/src/main/cpp/: AndroidMain.cpp  Buffers.h  Debugging.h  ModelLoader.cpp  ModelLoader.h  Sensor.cpp  Sensor.h  ValidationLayers.cpp  VulkanMain.cpp  VulkanMain.h  VulkanUtil.h
Heart-Beat-Threading/app/src/main/res/values/: strings.xml
Heart-Beat-Threading/app/src/main/shaders/: heart.frag  heart.vert
Heart-Beat-Threading/gradle/wrapper/: gradle-wrapper.properties
